a different fix for removing the scrollbar

--- a/style.css
+++ b/style.css
@@ -14,4 +14,7 @@ html, body {
 body {
   font-family: "Montserrat";
   font-size: 14px;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
 }
